--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,25 +36,24 @@ dependencies:
   cupertino_icons: ^1.0.2
   
   # Firebase dependencies
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
-  firebase_storage: ^11.5.6
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
+  cloud_firestore: ^5.6.5
+  firebase_storage: ^12.4.4
   google_maps_flutter: ^2.5.0
-  geolocator: ^10.1.0
+  geolocator: ^13.0.2
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   image_picker: ^1.0.4
-  intl: ^0.18.1
-  qr_code_scanner: ^1.0.1
-  flutter_local_notifications: ^9.9.1
+  intl: ^0.20.2
   permission_handler: ^11.1.0
   url_launcher: ^6.2.2
   cached_network_image: ^3.3.0
   flutter_svg: ^2.0.9
   shimmer: ^3.0.0
-  get_it: ^7.6.7
+  get_it: ^8.0.3
   location: ^8.0.0
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +64,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -94,16 +93,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Poppins
-      fonts:
-        - asset: assets/fonts/Poppins-Regular.ttf
-        - asset: assets/fonts/Poppins-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Poppins-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Poppins-Bold.ttf
-          weight: 700
+#  fonts:
+#    - family: Poppins
+#      fonts:
+#        - asset: assets/fonts/Poppins-Regular.ttf
+#        - asset: assets/fonts/Poppins-Medium.ttf
+#          weight: 500
+#        - asset: assets/fonts/Poppins-SemiBold.ttf
+#          weight: 600
+#        - asset: assets/fonts/Poppins-Bold.ttf
+#          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
